--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -40,14 +40,14 @@
 
         <!-- CONTENIDO - CONTACTO -->
 
-        <div class="container-main-contact">
-            <div class="form-contact ">
+        <main class="main-contact">
+            <div class="form-contact">
                 <form method="post" class="contact-form">
                     Nombre: <input type="text" name="nombre" required><br><br>
                     Apellido: <input type="text" name="apellido" required><br><br>
                     E-mail: <input type="email" name="e-mail" required><br><br>
-                    ¿Desea recibir info sobre nosotros? <input class="checkbox" type="checkbox" name="cb_neswletter"
-                        required><br><br>
+                    <p>¿Desea recibir info sobre nosotros?</p> <input class="checkbox" type="checkbox"
+                        name="cb_neswletter" required><br><br>
                     <p>Estado civil:</p>
                     <select class="select-contact" name="estadocivil" required>
                         <option value="casado">Casado</option>
@@ -59,65 +59,63 @@
                     <input class="reset" type="reset" name="btn_clearform" value="Limpiar formulario"><br><br>
                     <input class="submit" type="submit" name="btn_submit">
                 </form>
-
             </div>
-        </div>
-    </main>
+        </main>
 
-    <!-- FOOTER -->
+        <!-- FOOTER -->
 
-    <footer>
-        <div class="contenedor-footer footer-contac-tbl">
-            <div class="logo-footer">
-                <div class="box-1">
-                    <img src="../assets/img/logofooter.jpg" alt="">
-                </div>
-            </div>
-
-            <div class="redes">
-                <div class="box-2">
-                    <p>Seguinos en las redes</p><br>
+        <footer>
+            <div class="contenedor-footer footer-contac-tbl">
+                <div class="logo-footer">
+                    <div class="box-1">
+                        <img src="../assets/img/logofooter.jpg" alt="">
+                    </div>
                 </div>
 
-                <div class="box-3"><a href="https://www.facebook.com" class="icon fbIcon"><img
-                            src="../assets/img/fbIcon.png " alt=""></a></div>
-                <div class="box-4"><a href="https://www.instagram.com" class="icon igIcon"><img
-                            src="../assets/img/igIcon.png " alt=""></a></div>
-                <div class="box-5"><a href="https://www.twitter.com" class="icon twIcon"><img
-                            src="../assets/img/twIcon.png " alt=""></a></div>
-            </div>
+                <div class="redes">
+                    <div class="box-2">
+                        <p>Seguinos en las redes</p><br>
+                    </div>
 
-            <div class="dom">
-                <div class="box-6">
-                    <p>Oficinas comerciales</p>
+                    <div class="box-3"><a href="https://www.facebook.com" class="icon fbIcon"><img
+                                src="../assets/img/fbIcon.png " alt=""></a></div>
+                    <div class="box-4"><a href="https://www.instagram.com" class="icon igIcon"><img
+                                src="../assets/img/igIcon.png " alt=""></a></div>
+                    <div class="box-5"><a href="https://www.twitter.com" class="icon twIcon"><img
+                                src="../assets/img/twIcon.png " alt=""></a></div>
                 </div>
-                <div class="box-7">
-                    <p class="p-footer1">Sede Central:</p>
-                    <p class="p-footer2">Jerónimo Luis de Cabrera 783 PB OF, 5000 Córdoba.</p>
-                    <p>TE: 351-6455445</p><br>
-                    <p class="p-footer3">Suc. Mendoza:</p>
-                    <p class="p-footer4">Pte. Roque Senz Peña 387 PB OF, 5501 Mendoza.</p>
-                    <p>TE: 261-6498988</p>
-                    </p>
-                </div>
-            </div>
 
-            <div class="contact-footer">
-                <div class="box-6">
-                    <p>Contacto</p>
-                </div><br>
-                <div class="box-7">
-                    <p class="p-footer1">
-                        <b>E-mail: </b>mailerCba.nuevamdicina@gmail.com
-                    </p><br><br>
-                    <div class="box-8">
-                        <p class="p-footer3">
-                            <b>E-mail: </b>mailerMnz.nuevamdicina@gmail.com
+                <div class="dom">
+                    <div class="box-6">
+                        <p>Oficinas comerciales</p>
+                    </div>
+                    <div class="box-7">
+                        <p class="p-footer1">Sede Central:</p>
+                        <p class="p-footer2">Jerónimo Luis de Cabrera 783 PB OF, 5000 Córdoba.</p>
+                        <p>TE: 351-6455445</p><br>
+                        <p class="p-footer3">Suc. Mendoza:</p>
+                        <p class="p-footer4">Pte. Roque Senz Peña 387 PB OF, 5501 Mendoza.</p>
+                        <p>TE: 261-6498988</p>
                         </p>
                     </div>
                 </div>
-            </div>
-    </footer>
+
+                <div class="contact-footer">
+                    <div class="box-6">
+                        <p>Contacto</p>
+                    </div><br>
+                    <div class="box-7">
+                        <p class="p-footer1">
+                            <b>E-mail: </b>mailerCba.nuevamdicina@gmail.com
+                        </p><br><br>
+                        <div class="box-8">
+                            <p class="p-footer3">
+                                <b>E-mail: </b>mailerMnz.nuevamdicina@gmail.com
+                            </p>
+                        </div>
+                    </div>
+                </div>
+        </footer>
 </body>
 
 </html>
