Agrego SASS y SEO al proyecto

--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -5,9 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"
+        content="internacion domiciliaria, salud, cuidados domiciliarios, pacientes cronicos, patologias agudas">
+    <meta name="description"
+        content="Empresa nacional, empresa argentina, 100% argentina, empresa cordobesa, iniciamos en el 2011">
+    <meta name="author" content="Javier Romero">
+    <meta name="copyright" content="NuevaMedicina">
+    <meta property="og: title" copntent="NuevaMedicina">
+    <meta property="og: description" copntent="Empresa 100% Cordobesa">
+    <meta property="og: image" copntent="assets/img/logofooter">
     <title>Nueva Medicina</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="icon" href="../assets/img/icono_logo.ico">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="assets/img/icono_logo.ico">
+
 </head>
 
 <body>
@@ -156,21 +166,21 @@
         <div class="contenedor-footer">
             <div class="logo-footer">
                 <div class="box-1">
-                    <img src="../assets/img/logofooter.jpg" alt="">
+                    <img src="../assets/img/logofooter.jpg" alt="logofooter">
                 </div>
             </div>
 
-            <div class="redes">
+            <div class="redes footer-tbl-suc footer-mbl-suc">
                 <div class="box-2">
                     <p>Seguinos en las redes</p><br>
                 </div>
 
                 <div class="box-3"><a href="https://www.facebook.com" class="icon fbIcon"><img
-                            src="../assets/img/fbIcon.png " alt=""></a></div>
+                            src="../assets/img/fbIcon.png " alt="facebook_iniciar_sesion"></a></div>
                 <div class="box-4"><a href="https://www.instagram.com" class="icon igIcon"><img
-                            src="../assets/img/igIcon.png " alt=""></a></div>
+                            src="../assets/img/igIcon.png " alt="instagram_iniciar_sesion"></a></div>
                 <div class="box-5"><a href="https://www.twitter.com" class="icon twIcon"><img
-                            src="../assets/img/twIcon.png " alt=""></a></div>
+                            src="../assets/img/twIcon.png " alt="tweeter_iniciar_sesion"></a></div>
             </div>
 
             <div class="dom">
