--- a/pages/prestaciones.html
+++ b/pages/prestaciones.html
@@ -5,9 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"
+        content="internacion domiciliaria, salud, cuidados domiciliarios, pacientes cronicos, patologias agudas">
+    <meta name="description"
+        content="Empresa nacional, empresa argentina, 100% argentina, empresa cordobesa, iniciamos en el 2011">
+    <meta name="author" content="Javier Romero">
+    <meta name="copyright" content="NuevaMedicina">
+    <meta property="og: title" copntent="NuevaMedicina">
+    <meta property="og: description" copntent="Empresa 100% Cordobesa">
+    <meta property="og: image" copntent="assets/img/logofooter">
     <title>Nueva Medicina</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="icon" href="../assets/img/icono_logo.ico">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="assets/img/icono_logo.ico">
+
 </head>
 
 <body>
@@ -18,10 +28,10 @@
         <div class="container-navBar">
 
             <div class="navAnimation">
-                <a href="../index.html"><img src="../assets/img/logo2.jpg" alt=""></a>
+                <a href="../index.html"><img src="../assets/img/logo2.jpg" alt="logo2"></a>
             </div>
             <div class="navImg">
-                <a href="../index.html"><img src="../assets/img/logo1.png"></a>
+                <a href="../index.html"><img src="../assets/img/logo1.png" alt="logo1"></a>
             </div>
 
             <nav class="navBar">
@@ -45,7 +55,7 @@
 
         <div class="grid-prest">
             <div class="prest2">
-                <img src="../assets/img/prestaciones.jpg" alt="">
+                <img src="../assets/img/prestaciones.jpg" alt="prestaciones">
             </div>
 
             <div class="prest3">
@@ -86,21 +96,21 @@
         <div class="contenedor-footer">
             <div class="logo-footer">
                 <div class="box-1">
-                    <img src="../assets/img/logofooter.jpg" alt="">
+                    <img src="../assets/img/logofooter.jpg" alt="logofooter">
                 </div>
             </div>
 
-            <div class="redes">
+            <div class="redes footer-tbl-suc footer-mbl-suc">
                 <div class="box-2">
                     <p>Seguinos en las redes</p><br>
                 </div>
 
                 <div class="box-3"><a href="https://www.facebook.com" class="icon fbIcon"><img
-                            src="../assets/img/fbIcon.png " alt=""></a></div>
+                            src="../assets/img/fbIcon.png " alt="facebook_iniciar_sesion"></a></div>
                 <div class="box-4"><a href="https://www.instagram.com" class="icon igIcon"><img
-                            src="../assets/img/igIcon.png " alt=""></a></div>
+                            src="../assets/img/igIcon.png " alt="instagram_iniciar_sesion"></a></div>
                 <div class="box-5"><a href="https://www.twitter.com" class="icon twIcon"><img
-                            src="../assets/img/twIcon.png " alt=""></a></div>
+                            src="../assets/img/twIcon.png " alt="tweeter_iniciar_sesion"></a></div>
             </div>
 
             <div class="dom">
@@ -108,17 +118,17 @@
                     <p>Oficinas comerciales</p>
                 </div>
                 <div class="box-7">
-                    <p>Sede Central:</p>
-                    <p>Jerónimo Luis de Cabrera 783 PB OF, 5000 Córdoba.</p>
+                    <p class="p-footer1">Sede Central:</p>
+                    <p class="p-footer2">Jerónimo Luis de Cabrera 783 PB OF, 5000 Córdoba.</p>
                     <p>TE: 351-6455445</p><br>
-                    <p>Suc. Mendoza:</p>
-                    <p>Pte. Roque Senz Peña 387 PB OF, 5501 Mendoza.</p>
+                    <p class="p-footer3">Suc. Mendoza:</p>
+                    <p class="p-footer4">Pte. Roque Senz Peña 387 PB OF, 5501 Mendoza.</p>
                     <p>TE: 261-6498988</p>
                     </p>
                 </div>
             </div>
 
-            <div class=" contact-footer">
+            <div class="contact-footer">
                 <div class="box-6">
                     <p>Contacto</p>
                 </div><br>
