--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,8 +15,8 @@
     <meta property="og: description" copntent="Empresa 100% Cordobesa">
     <meta property="og: image" copntent="assets/img/logofooter">
     <title>Nueva Medicina</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="assets/img/icono_logo.ico">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" href="../assets/img/icono_logo.ico">
 
 </head>
 
