--- a/pages/prestaciones.html
+++ b/pages/prestaciones.html
@@ -13,10 +13,10 @@
     <meta name="copyright" content="NuevaMedicina">
     <meta property="og: title" copntent="NuevaMedicina">
     <meta property="og: description" copntent="Empresa 100% Cordobesa">
-    <meta property="og: image" copntent="assets/img/logofooter">
+    <meta property="og: image" copntent="../assets/img/logofooter">
     <title>Nueva Medicina</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="assets/img/icono_logo.ico">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="icon" href="../assets/img/icono_logo.ico">
 
 </head>
 
