--- a/pages/prestaciones.html
+++ b/pages/prestaciones.html
@@ -13,83 +13,81 @@
     <meta name="copyright" content="NuevaMedicina">
     <meta property="og: title" copntent="NuevaMedicina">
     <meta property="og: description" copntent="Empresa 100% Cordobesa">
-    <meta property="og: image" copntent="../assets/img/logofooter">
+    <meta property="og: image" copntent="assets/img/logofooter">
     <title>Nueva Medicina</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="icon" href="../assets/img/icono_logo.ico">
-
+    <script defer src="../js/app.js"></script>
 </head>
 
 <body>
-
-    <!-- ENCABEZADO -->
-
-    <header>
-        <div class="container-navBar">
-
-            <div class="navAnimation">
-                <a href="../index.html"><img src="../assets/img/logo2.jpg" alt="logo2"></a>
-            </div>
-            <div class="navImg">
-                <a href="../index.html"><img src="../assets/img/logo1.png" alt="logo1"></a>
-            </div>
-
-            <nav class="navBar">
-                <ul>
-                    <li><a href="../pages/prestaciones.html">Prestaciones</a></li>
-                    <li><a href="../pages/sucursales.html">Sucursales</a></li>
-                    <li><a href="../pages/aboutUs.html">Sobre Nosotros</a></li>
-                    <li><a href="../pages/contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-
-        </div>
+    <header class="topheader">
+        <nav class="topnav">
+            <a href="../index.html" class="logo">
+                <img src="../assets/img/logo.png" alt="logo">
+            </a>
+            <button class="open-menu" aria-label="abrir menu">
+                <img src="../assets/img/bars.svg" alt="abrir menu">
+            </button>
+            <ul class="menu">
+                <button class="close-menu" aria-label="cerrar menu">
+                    <img src="../assets/img/close.svg" alt="cerrar menu">
+                </button>
+                <li><a href="../pages/prestaciones.html">Prestaciones</a></li>
+                <li><a href="../index.html">Sucursales</a></li>
+                <li><a href="../index.html">Nosotros</a></li>
+                <li><a href="../index.html">Contacto</a></li>
+                <li><a href="../pages/login.html">Ingresar</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!-- CONTENIDO - PRESTACIONES -->
 
-    <div class="container-prest">
-        <div class="prest1">
-            <h1 class="h1">Nuestros <span>servicios</span></h1>
-        </div>
-
-        <div class="grid-prest">
-            <div class="prest2">
-                <img src="../assets/img/prestaciones.jpg" alt="prestaciones">
+    <body>
+        <div class="container-prest">
+            <div class="prest1">
+                <h1 class="h1">Nuestros <span>servicios</span></h1>
             </div>
 
-            <div class="prest3">
-                <div class="imgServ imgServ-1"><a href=""><img src="../assets/img/serv/1.png" alt=""></a></div>
-                <div class="imgServ imgServ-2"><a href=""><img src="../assets/img/serv/2.png" alt=""></a></div>
-                <div class="imgServ imgServ-3"><a href=""><img src="../assets/img/serv/3.png" alt=""></a></div>
-                <div class="imgServ imgServ-4"><a href=""><img src="../assets/img/serv/4.png" alt=""></a></div>
-                <div class="imgServ imgServ-5"><a href=""><img src="../assets/img/serv/5.png" alt=""></a></div>
-                <div class="imgServ imgServ-6"><a href=""><img src="../assets/img/serv/6.png" alt=""></a></div>
-                <div class="imgServ imgServ-7"><a href=""><img src="../assets/img/serv/7.png" alt=""></a></div>
-                <div class="imgServ imgServ-8"><a href=""><img src="../assets/img/serv/8.png" alt=""></a></div>
-                <div class="imgServ imgServ-9"><a href=""><img src="../assets/img/serv/9.png" alt=""></a></div>
-                <div class="imgServ imgServ-10"><a href=""><img src="../assets/img/serv/10.png" alt=""></a></div>
-                <div class="imgServ imgServ-11"><a href=""><img src="../assets/img/serv/11.png" alt=""></a></div>
-                <div class="imgServ imgServ-12"><a href=""><img src="../assets/img/serv/12.png" alt=""></a></div>
+            <div class="grid-prest">
+                <div class="prest2">
+                    <img src="../assets/img/prestaciones.jpg" alt="prestaciones">
+                </div>
+
+                <div class="prest3">
+                    <div class="imgServ imgServ-1"><a href=""><img src="../assets/img/serv/1.png" alt=""></a></div>
+                    <div class="imgServ imgServ-2"><a href=""><img src="../assets/img/serv/2.png" alt=""></a></div>
+                    <div class="imgServ imgServ-3"><a href=""><img src="../assets/img/serv/3.png" alt=""></a></div>
+                    <div class="imgServ imgServ-4"><a href=""><img src="../assets/img/serv/4.png" alt=""></a></div>
+                    <div class="imgServ imgServ-5"><a href=""><img src="../assets/img/serv/5.png" alt=""></a></div>
+                    <div class="imgServ imgServ-6"><a href=""><img src="../assets/img/serv/6.png" alt=""></a></div>
+                    <div class="imgServ imgServ-7"><a href=""><img src="../assets/img/serv/7.png" alt=""></a></div>
+                    <div class="imgServ imgServ-8"><a href=""><img src="../assets/img/serv/8.png" alt=""></a></div>
+                    <div class="imgServ imgServ-9"><a href=""><img src="../assets/img/serv/9.png" alt=""></a></div>
+                    <div class="imgServ imgServ-10"><a href=""><img src="../assets/img/serv/10.png" alt=""></a></div>
+                    <div class="imgServ imgServ-11"><a href=""><img src="../assets/img/serv/11.png" alt=""></a></div>
+                    <div class="imgServ imgServ-12"><a href=""><img src="../assets/img/serv/12.png" alt=""></a></div>
+                </div>
+            </div>
+
+
+            <div class="prest4">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo nam, a
+                    laudantium
+                    deserunt accusamus
+                    odit fuga accusantium saepe error cumque assumenda nisi, nulla minima sapiente modi eligendi quas ad
+                    repudiandae nostrum corrupti repellat iusto voluptas alias! Totam neque excepturi ullam deleniti est
+                    architecto sapiente quos asperiores soluta quas qui ipsam autem praesentium aliquam doloremque
+                    laborum
+                    obcaecati, exercitationem eaque sed veniam. Corporis quam pariatur, blanditiis adipisci repudiandae
+                    maxime sunt libero numquam aliquam sed ipsam iste nesciunt beatae nihil perspiciatis nisi dolore
+                    enim
+                    reiciendis magnam. Earum culpa assumenda ea.
+                </p>
             </div>
         </div>
-
-
-        <div class="prest4">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo nam, a
-                laudantium
-                deserunt accusamus
-                odit fuga accusantium saepe error cumque assumenda nisi, nulla minima sapiente modi eligendi quas ad
-                repudiandae nostrum corrupti repellat iusto voluptas alias! Totam neque excepturi ullam deleniti est
-                architecto sapiente quos asperiores soluta quas qui ipsam autem praesentium aliquam doloremque
-                laborum
-                obcaecati, exercitationem eaque sed veniam. Corporis quam pariatur, blanditiis adipisci repudiandae
-                maxime sunt libero numquam aliquam sed ipsam iste nesciunt beatae nihil perspiciatis nisi dolore
-                enim
-                reiciendis magnam. Earum culpa assumenda ea.
-            </p>
-        </div>
-    </div>
+    </body>
 
     <!-- FOOTER -->
     <footer>
