--- a/pages/prestaciones.html
+++ b/pages/prestaciones.html
@@ -45,103 +45,54 @@
     <!-- CONTENIDO - PRESTACIONES -->
 
     <body>
-        <div class="container-prest">
-            <div class="prest1">
-                <h1 class="h1">Nuestros <span>servicios</span></h1>
-            </div>
 
-            <div class="grid-prest">
-                <div class="prest2">
-                    <img src="../assets/img/prestaciones.jpg" alt="prestaciones">
-                </div>
+        <div class="grid-prest">
 
-                <div class="prest3">
-                    <div class="imgServ imgServ-1"><a href=""><img src="../assets/img/serv/1.png" alt=""></a></div>
-                    <div class="imgServ imgServ-2"><a href=""><img src="../assets/img/serv/2.png" alt=""></a></div>
-                    <div class="imgServ imgServ-3"><a href=""><img src="../assets/img/serv/3.png" alt=""></a></div>
-                    <div class="imgServ imgServ-4"><a href=""><img src="../assets/img/serv/4.png" alt=""></a></div>
-                    <div class="imgServ imgServ-5"><a href=""><img src="../assets/img/serv/5.png" alt=""></a></div>
-                    <div class="imgServ imgServ-6"><a href=""><img src="../assets/img/serv/6.png" alt=""></a></div>
-                    <div class="imgServ imgServ-7"><a href=""><img src="../assets/img/serv/7.png" alt=""></a></div>
-                    <div class="imgServ imgServ-8"><a href=""><img src="../assets/img/serv/8.png" alt=""></a></div>
-                    <div class="imgServ imgServ-9"><a href=""><img src="../assets/img/serv/9.png" alt=""></a></div>
-                    <div class="imgServ imgServ-10"><a href=""><img src="../assets/img/serv/10.png" alt=""></a></div>
-                    <div class="imgServ imgServ-11"><a href=""><img src="../assets/img/serv/11.png" alt=""></a></div>
-                    <div class="imgServ imgServ-12"><a href=""><img src="../assets/img/serv/12.png" alt=""></a></div>
-                </div>
+            <div class="prest2">
+                <div class="imgServ imgServ-1"><a href=""><img src="../assets/img/serv/1.png" alt=""></a></div>
+                <div class="imgServ imgServ-2"><a href=""><img src="../assets/img/serv/2.png" alt=""></a></div>
+                <div class="imgServ imgServ-3"><a href=""><img src="../assets/img/serv/3.png" alt=""></a></div>
+                <div class="imgServ imgServ-4"><a href=""><img src="../assets/img/serv/4.png" alt=""></a></div>
+                <div class="imgServ imgServ-5"><a href=""><img src="../assets/img/serv/5.png" alt=""></a></div>
+                <div class="imgServ imgServ-6"><a href=""><img src="../assets/img/serv/6.png" alt=""></a></div>
+                <div class="imgServ imgServ-7"><a href=""><img src="../assets/img/serv/7.png" alt=""></a></div>
+                <div class="imgServ imgServ-8"><a href=""><img src="../assets/img/serv/8.png" alt=""></a></div>
+                <div class="imgServ imgServ-9"><a href=""><img src="../assets/img/serv/9.png" alt=""></a></div>
+                <div class="imgServ imgServ-10"><a href=""><img src="../assets/img/serv/10.png" alt=""></a></div>
+                <div class="imgServ imgServ-11"><a href=""><img src="../assets/img/serv/11.png" alt=""></a></div>
+                <div class="imgServ imgServ-12"><a href=""><img src="../assets/img/serv/12.png" alt=""></a></div>
             </div>
 
 
-            <div class="prest4">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo nam, a
-                    laudantium
-                    deserunt accusamus
-                    odit fuga accusantium saepe error cumque assumenda nisi, nulla minima sapiente modi eligendi quas ad
-                    repudiandae nostrum corrupti repellat iusto voluptas alias! Totam neque excepturi ullam deleniti est
-                    architecto sapiente quos asperiores soluta quas qui ipsam autem praesentium aliquam doloremque
-                    laborum
-                    obcaecati, exercitationem eaque sed veniam. Corporis quam pariatur, blanditiis adipisci repudiandae
-                    maxime sunt libero numquam aliquam sed ipsam iste nesciunt beatae nihil perspiciatis nisi dolore
-                    enim
-                    reiciendis magnam. Earum culpa assumenda ea.
-                </p>
+            <div class="prest3">
+                <p>Nueva Medicina ofrece prestaciones para el cuidado de pacientes con diagnósticos agudos en donde los
+                    síntomas aparecen,
+                    cambian o empeoran rápidamente. Enfoque en el monitoreo y asistencia para la prevención,
+                    rehabilitación y/o disminución
+                    de efectos secundarios.
             </div>
         </div>
     </body>
 
-    <!-- FOOTER -->
-    <footer>
-        <div class="contenedor-footer">
-            <div class="logo-footer">
-                <div class="box-1">
-                    <img src="../assets/img/logofooter.jpg" alt="logofooter">
-                </div>
-            </div>
+    <!------------------------------------------------ FOOTER -->
+    <footer class="contenedor-footer">
+        <div class="redes">
+            <a href="https://www.facebook.com" class="fbIcon" target="_blank">
+                <img src="../assets/img/facebook.jpg " alt="facebook_iniciar_sesion"></a>
 
-            <div class="redes footer-tbl-suc footer-mbl-suc">
-                <div class="box-2">
-                    <p>Seguinos en las redes</p><br>
-                </div>
+            <a href="https://www.instagram.com" class="igIcon" target="_blank">
+                <img src="../assets/img/instagram.jpg " alt="instagram_iniciar_sesion"></a>
 
-                <div class="box-3"><a href="https://www.facebook.com" class="icon fbIcon"><img
-                            src="../assets/img/fbIcon.png " alt="facebook_iniciar_sesion"></a></div>
-                <div class="box-4"><a href="https://www.instagram.com" class="icon igIcon"><img
-                            src="../assets/img/igIcon.png " alt="instagram_iniciar_sesion"></a></div>
-                <div class="box-5"><a href="https://www.twitter.com" class="icon twIcon"><img
-                            src="../assets/img/twIcon.png " alt="tweeter_iniciar_sesion"></a></div>
-            </div>
+            <a href="https://www.twitter.com" class="twIcon" target="_blank">
+                <img src="../assets/img/twitter.jpg" alt="tweeter_iniciar_sesion"></a>
+        </div>
 
-            <div class="dom">
-                <div class="box-6">
-                    <p>Oficinas comerciales</p>
-                </div>
-                <div class="box-7">
-                    <p class="p-footer1">Sede Central:</p>
-                    <p class="p-footer2">Jerónimo Luis de Cabrera 783 PB OF, 5000 Córdoba.</p>
-                    <p>TE: 351-6455445</p><br>
-                    <p class="p-footer3">Suc. Mendoza:</p>
-                    <p class="p-footer4">Pte. Roque Senz Peña 387 PB OF, 5501 Mendoza.</p>
-                    <p>TE: 261-6498988</p>
-                    </p>
-                </div>
-            </div>
+        <div class="copyright">
+            <p>©Copyright - Nueva Medicina</p>
+        </div>
 
-            <div class="contact-footer">
-                <div class="box-6">
-                    <p>Contacto</p>
-                </div><br>
-                <div class="box-7">
-                    <p class="p-footer1">
-                        <b>E-mail: </b>mailerCba.nuevamdicina@gmail.com
-                    </p><br><br>
-                    <div class="box-8">
-                        <p class="p-footer3">
-                            <b>E-mail: </b>mailerMnz.nuevamdicina@gmail.com
-                        </p>
-                    </div>
-                </div>
-            </div>
     </footer>
+    </div>
 </body>
 
 </html>
