--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <meta property="og: description" copntent="Empresa 100% Cordobesa">
     <meta property="og: image" copntent="assets/img/logofooter">
     <title>Nueva Medicina</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="icon" href="../assets/img/icono_logo.ico">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
+    <link rel="icon" href="assets/img/icono_logo.ico">
 </head>
+
+<!--------------------------------------------------- NAV BAR -->
 
 <body>
     <header class="topheader">
@@ -25,14 +28,8 @@
             <a href="../index.html" class="logo">
                 <img src="../assets/img/logo.png" alt="logo">
             </a>
-            <button class="open-menu" aria-label="abrir menu">
-                <img src="../assets/img/bars.svg" alt="abrir menu">
-            </button>
             <!----------------------------------------- MENU -->
             <ul class="menu">
-                <button class="close-menu" aria-label="Cerrar menú">
-                    <img height="50" width="70" src="assets/img/close.svg" alt="cerrar menu">
-                </button>
                 <li><a href="#suc">sucursales</a></li>
                 <li><a href="#us">nosotros</a></li>
                 <li><a href="#contact">contacto</a></li>
@@ -53,7 +50,7 @@
     <!---------------------------------------- SECC SUCURSALES -->
     <section class="main_suc" id="suc">
         <div class="title">
-            <h1><i>CASA CENTRAL</i></h1>
+            <h1>CASA CENTRAL</h1>
         </div>
         <div class="vid">
             <iframe height="100%" width="100%" src="https://www.youtube.com/embed/FtD7hBacnTo"
