--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li><a href="#suc">sucursales</a></li>
                 <li><a href="#us">nosotros</a></li>
                 <li><a href="#contact">contacto</a></li>
-                <li><a href="../pages/prestaciones.html">prestaciones</a></li>
+                <li><a href="pages/prestaciones.html">prestaciones</a></li>
                 <li><a class="login" href="../pages/login.html">ingresar</a></li>
             </ul>
         </nav>
