--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <body>
     <header class="topheader">
         <nav class="topnav">
-            <a href="../index.html" class="logo">
-                <img src="../assets/img/logo.png" alt="logo">
+            <a href="index.html" class="logo">
+                <img src="assets/img/logo.png" alt="logo">
             </a>
             <!----------------------------------------- MENU -->
             <ul class="menu">
@@ -34,7 +34,7 @@
                 <li><a href="#us">nosotros</a></li>
                 <li><a href="#contact">contacto</a></li>
                 <li><a href="pages/prestaciones.html">prestaciones</a></li>
-                <li><a class="login" href="../pages/login.html">ingresar</a></li>
+                <li><a class="login" href="pages/login.html">ingresar</a></li>
             </ul>
         </nav>
     </header>
