--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <header class="topheader">
         <nav class="topnav">
             <a href="index.html" class="logo">
-                <img src="assets/img/logo.png" alt="logo">
+                <img src="assets/img/logo-mbl.jpg" alt="logo">
             </a>
             <!----------------------------------------- MENU -->
             <ul class="menu">
+                <li><a href="pages/prestaciones.html">prestaciones</a></li>
                 <li><a href="#suc">sucursales</a></li>
                 <li><a href="#us">nosotros</a></li>
                 <li><a href="#contact">contacto</a></li>
-                <li><a href="pages/prestaciones.html">prestaciones</a></li>
                 <li><a class="login" href="pages/login.html">ingresar</a></li>
             </ul>
         </nav>
