--- a/pages/kinesiologia.html
+++ b/pages/kinesiologia.html
@@ -25,21 +25,14 @@
             <a href="../index.html" class="logo">
                 <img src="../assets/img/logo.png" alt="logo">
             </a>
-            <button class="open-menu" aria-label="abrir menu">
-                <img src="../assets/img/bars.svg" alt="abrir menu">
-            </button>
             <!----------------------------------------- MENU -->
             <ul class="menu">
-                <button class="close-menu" aria-label="Cerrar menú">
-                    <img height="50" width="70" src="assets/img/close.svg" alt="cerrar menu">
-                </button>
-                <li><a href="../index.html">sucursales</a></li>
-                <li><a href="../index.html">nosotros</a></li>
-                <li><a href="../index.html">contacto</a></li>
                 <li><a href="../pages/prestaciones.html">prestaciones</a></li>
-                <li><a class="login" href="../pages/login.html">ingresar</a></li>
+                <li><a href="#suc">sucursales</a></li>
+                <li><a href="#us">nosotros</a></li>
+                <li><a href="#contact">contacto</a></li>
+                <li><a class="../login" href="../pages/login.html">ingresar</a></li>
             </ul>
-        </nav>
     </header>
 
 
