--- a/pages/enf.html
+++ b/pages/enf.html
@@ -27,11 +27,11 @@
             </a>
             <!----------------------------------------- MENU -->
             <ul class="menu">
-                <li><a href="../index.html">sucursales</a></li>
-                <li><a href="../index.html">nosotros</a></li>
-                <li><a href="../index.html">contacto</a></li>
                 <li><a href="../pages/prestaciones.html">prestaciones</a></li>
-                <li><a class="login" href="../pages/login.html">ingresar</a></li>
+                <li><a href="#suc">sucursales</a></li>
+                <li><a href="#us">nosotros</a></li>
+                <li><a href="#contact">contacto</a></li>
+                <li><a class="../login" href="../pages/login.html">ingresar</a></li>
             </ul>
         </nav>
     </header>
