cambio logo vista mbl

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <header class="topheader">
         <nav class="topnav">
             <a href="index.html" class="logo">
+                <img src="assets/img/logo.png" alt="logo">
+            </a>
+            <a href="index.html" class="logo-mbl">
                 <img src="assets/img/logo-mbl.jpg" alt="logo">
             </a>
             <!----------------------------------------- MENU -->
@@ -81,8 +84,13 @@
 
     <section class="main_us" id="us">
 
-        <divc class="historia">
-
+        <divc class="historia-mbl">
+            Nueva Medicina tiene como objetivo brindar al paciente una prestación similar en calidad técnica a la
+            sanatorial,
+            utilizando alternativas terapéuticas que brinda su grupo familiar y social, evitando los efectos no deseados
+            de las
+            estadías institucionales.
+            <img src="assets/img/beneficios.jpg" alt="">
         </divc>
     </section>
 
